Edits made to update site

--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
             <img src="img/logo@2.png" class="logo" alt="Celia Diller logo">
           </picture>
 
-					<nav>
-            <ul>
-							<li><a href="index.html" class="button contact">Work</a></li>
+          <nav>
+						<ul class="menu">
+              <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
               <li><a href="#contact" class="button contact">Contact</a></li>
@@ -45,8 +45,7 @@
         </header>
 
 				<div>
-					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
-					<h1> Enjoy My Work! </h1>
+					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
 				</div>
       </div>
 			<!-- For the hero section -->
@@ -57,6 +56,7 @@
 					<source srcset="img/profile.png" media="(max-width:767px)">
 					<img src="img/profile.png" alt="Celia Diller profile">
 				</picture>
+			</div>
 
 				<main>
 					<p>
@@ -78,36 +78,50 @@
 						my best innovative and creative self.
 					</p>
 
+
 					<h3>Skills and Tools:</h3>
-					<p>
-						• User Flow Charts • User Research/Testing • Design/Alignment Skills • Knowledge of the standards of IOS
-						and Android • Developing low, mid and high-fidelity wireframes platforms
-					</p>
+						<ul>
+                  <li>Generative & Evaluative Research</li>
+                  <li>Usability Research and Testing</li>
+                  <li>Preference & A/B Testing</li>
+                  <li>Persona and Brand Development</li>
+                  <li>User Interviews</li>
+                  <li>Task Analysis and User Flows</li>
+									<li>Knowledge of the standards of IOS and Android</li>
+                  <li>Data Analysis</li>
+                  <li>Basic HTML, CSS, and JavaScript</li>
+            </ul>
 
 					<h3>Tools Used:</h3>
 
-					<p>
-						• Adobe XD • Marvel • Sketch • Figma • Procreate • Adobe Photoshop
-					</p>
+
+						<ul>
+									<li>Figma</li>
+                  <li>Adobe XD</li>
+                  <li>Marvel</li>
+                  <li>Procreate</li>
+                  <li>Adobe Illustrator</li>
+                  <li>Atom</li>
+						</ul>
 				</main>
 			</div>
-		</div>
 
-	<!-- For your footer -->
-  <div class="container">
-    <footer>
-      <h1>Get In Touch!</h1>
-      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-      <p>Copyright Celia Diller 2020</p>
+			<!-- For your footer -->
+				  <div class="container">
+						<footer id="contact">
+							<h1>Get In Touch!</h1>
+							<p> Want to know more? Contact me by email:</p>
+							<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+							<p> or check out my</p>
+							<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+							<p>Copyright Celia Diller 2020</p>
+				    </footer>
+				  </div>
+				</div>
 
-    </footer>
-  </div>
-</div>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-  <script src="js/scripts.js"></script>
-</body>
-
-</html>
+				  <script src="js/scripts.js"></script>
+				</body>
+				</html>
