--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="author" content="CeliaDiller">
@@ -21,6 +22,7 @@
 </head>
 
 <!-- For the header -->
+
 <body>
   <div id="hero">
     <div class="container">
@@ -31,9 +33,9 @@
             <img src="img/logo@2.png" class="logo" alt="Celia Diller logo">
           </picture>
 
-					<nav>
-            <ul>
-							<li><a href="index.html" class="button contact">Work</a></li>
+          <nav>
+						<ul class="menu">
+              <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
               <li><a href="#contact" class="button contact">Contact</a></li>
@@ -43,11 +45,9 @@
         </header>
 
 				<div>
-					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
-					<h1> Enjoy My Work! </h1>
+					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
 				</div>
       </div>
-		</div>
 
 <!-- For the body -->
 				<div class="container">
@@ -85,22 +85,24 @@
 
 						</div>
 					</div>
-
-					<!-- For your footer -->
-				  <div class="container">
-				    <footer>
-				      <h1>Get In Touch!</h1>
-				      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-				      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-				      <p>Copyright Celia Diller 2020</p>
-
-				    </footer>
-				  </div>
 				</div>
-				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-				  <script src="js/scripts.js"></script>
-				</body>
+				<!-- For your footer -->
+					  <div class="container">
+							<footer id="contact">
+								<h1>Get In Touch!</h1>
+								<p> Want to know more? Contact me by email:</p>
+								<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+								<p> or check out my</p>
+								<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+								<p>Copyright Celia Diller 2020</p>
+					    </footer>
+					  </div>
+					</div>
 
-				</html>
+					  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+					    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+					  <script src="js/scripts.js"></script>
+					</body>
+					</html>
