--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </picture>
 
           <nav>
-            <ul>
+						<ul class="menu">
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
@@ -52,6 +52,8 @@
           <h1> Enjoy My Work! </h1>
         </div>
       </div>
+			</div>
+
 
       <!-- For the hero section -->
       <div class="container">
@@ -72,6 +74,7 @@
           </div>
         </div>
 
+
         <div class="row">
 					<div class="col-md-6">
             <picture>
@@ -88,7 +91,6 @@
           	</div>
         	</div>
 				</div>
-
 
         <div class="row">
           <div class="col-md-6">
@@ -124,23 +126,25 @@
 						<a href="#" class="button contact">View Project</a>
 					</div>
         </div>
-      	</div>
+      </div>
+		</div>
 
-				<!-- For your footer -->
-			  <div class="container">
-			    <footer>
-			      <h1>Get In Touch!</h1>
-			      <p> Wanna know more? Contact me by email: celiadiller@gmail.com </p>
-			      <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn</a>
-			      <p>Copyright Celia Diller 2020</p>
+			<!-- For your footer -->
+				  <div class="container">
+						<footer id="contact">
+							<h1>Get In Touch!</h1>
+							<p> Want to know more? Contact me by email:</p>
+							<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+							<p> or check out my</p>
+							<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+							<p>Copyright Celia Diller 2020</p>
+				    </footer>
+				  </div>
+				</div>
 
-			    </footer>
-			  </div>
-			</div>
-			  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-			    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-			  <script src="js/scripts.js"></script>
-			</body>
-
-			</html>
+				  <script src="js/scripts.js"></script>
+				</body>
+				</html>
