--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -7,8 +7,7 @@
   <meta name="description" content="vintageclothingapp">
   <title>Celia Diller UX/UI Designer Atlanta</title>
   <!-- For the css -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -34,7 +33,7 @@
           </picture>
 
           <nav>
-						<ul class="menu">
+            <ul class="menu">
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
@@ -44,65 +43,65 @@
           </nav>
         </header>
 
-				<div>
-					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
-				</div>
+        <div>
+          <h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
+        </div>
       </div>
 
-<!-- For the body -->
-				<div class="container">
-	        <div class="row">
-	          <div class="col-md-6">
-	            <div class="descWrapper">
-	              <h3>Graphic Detail</h3>
-	              <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
-	            </div>
-	          </div>
+      <!-- For the body -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="descWrapper">
+              <h3>Graphic Detail</h3>
+              <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+            </div>
+          </div>
 
-	          <div class="col-md-6">
-	            <picture>
-	              <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
-	              <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
-	            </picture>
-	          </div>
-	        </div>
+          <div class="col-md-6">
+            <picture>
+              <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
+              <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
+            </picture>
+          </div>
+        </div>
 
-			<div class="container">
-							<p>Graphic Detail was my first design in the course. It helped me learn all what
-							UI/UX design was about. I got to create my first design by looking at what
-							others have done with their apps and coordinate my design with that to
-							create a beautiful, aesthetically pleasing app.</p>
+        <div class="container">
+          <p>Graphic Detail was my first design in the course. It helped me learn all what
+            UI/UX design was about. I got to create my first design by looking at what
+            others have done with their apps and coordinate my design with that to
+            create a beautiful, aesthetically pleasing app.</p>
 
-							<picture>
-								<source srcset="img/graphic_detail/graphic_detail_long_artboard.png" media="(max-width:767px)">
-						  	<img src="img/graphic_detail/graphic_detail_long_artboard.png" alt="Graphic Detail">
-							</picture>
+          <picture>
+            <source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
+            <img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
+          </picture>
 
-							<picture>
-	              <source srcset="img/graphic_detail/graphic_style_guide.png" media="(max-width:767px)">
-	              <img src="img/graphic_detail/graphic_detail_style_guide.png" alt="Graphic Detail">
-	            </picture>
+          <picture>
+            <source srcset="img/graphic_detail/graphic_style_guide.jpg" media="(max-width:767px)">
+            <img src="img/graphic_detail/graphic_detail_style_guide.jpg" alt="Graphic Detail">
+          </picture>
 
-						</div>
-					</div>
-				</div>
+        </div>
+      </div>
+    </div>
 
-				<!-- For your footer -->
-					  <div class="container">
-							<footer id="contact">
-								<h1>Get In Touch!</h1>
-								<p> Want to know more? Contact me by email:</p>
-								<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
-								<p> or check out my</p>
-								<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
-								<p>Copyright Celia Diller 2020</p>
-					    </footer>
-					  </div>
-					</div>
+    <!-- For your footer -->
+    <div class="container">
+      <footer id="contact">
+        <h1>Get In Touch!</h1>
+        <p> Want to know more? Contact me by email:</p>
+        <a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+        <p> or check out my</p>
+        <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+        <p>Copyright Celia Diller 2020</p>
+      </footer>
+    </div>
+  </div>
 
-					  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-					    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-					  <script src="js/scripts.js"></script>
-					</body>
-					</html>
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
