--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
   <meta name="description" content="vintageclothingapp">
   <title>Celia Diller UX/UI Designer Atlanta</title>
   <!-- For the css -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -34,7 +33,7 @@
           </picture>
 
           <nav>
-						<ul class="menu">
+            <ul class="menu">
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
@@ -44,84 +43,84 @@
           </nav>
         </header>
 
-				<div>
-					<h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
-				</div>
+        <div>
+          <h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
+        </div>
       </div>
-			<!-- For the hero section -->
+      <!-- For the hero section -->
 
 
-			<div class="container">
-				<picture>
-					<source srcset="img/profile.png" media="(max-width:767px)">
-					<img src="img/profile.png" alt="Celia Diller profile">
-				</picture>
-			</div>
+      <div class="container">
+        <picture>
+          <source srcset="img/profile.jpg" media="(max-width:767px)">
+          <img src="img/profile.jpg" alt="Celia Diller profile">
+        </picture>
+      </div>
 
-				<main>
-					<p>
-						My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
-						Biology
-						and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
-						and
-						am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
-						design
-						field, I had internships with social media marketing and website design fields. My artistic side bloomed
-						during college when I started to create drawings and paintings for fun. I love creating content that
-						helps
-						small businesses grow. I have juggled many things in the past and strive to do my best work with
-						everything I
-						take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
-						my love
-						of design and hard work of learning biology into a career. I am looking for a place where I can strive
-						to be
-						my best innovative and creative self.
-					</p>
-
-
-					<h3>Skills and Tools:</h3>
-						<ul>
-                  <li>Generative & Evaluative Research</li>
-                  <li>Usability Research and Testing</li>
-                  <li>Preference & A/B Testing</li>
-                  <li>Persona and Brand Development</li>
-                  <li>User Interviews</li>
-                  <li>Task Analysis and User Flows</li>
-									<li>Knowledge of the standards of IOS and Android</li>
-                  <li>Data Analysis</li>
-                  <li>Basic HTML, CSS, and JavaScript</li>
-            </ul>
-
-					<h3>Tools Used:</h3>
+      <main>
+        <p>
+          My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
+          Biology
+          and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
+          and
+          am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
+          design
+          field, I had internships with social media marketing and website design fields. My artistic side bloomed
+          during college when I started to create drawings and paintings for fun. I love creating content that
+          helps
+          small businesses grow. I have juggled many things in the past and strive to do my best work with
+          everything I
+          take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
+          my love
+          of design and hard work of learning biology into a career. I am looking for a place where I can strive
+          to be
+          my best innovative and creative self.
+        </p>
 
 
-						<ul>
-									<li>Figma</li>
-                  <li>Adobe XD</li>
-                  <li>Marvel</li>
-                  <li>Procreate</li>
-                  <li>Adobe Illustrator</li>
-                  <li>Atom</li>
-						</ul>
-				</main>
-			</div>
+        <h3>Skills and Tools:</h3>
+        <ul>
+          <li>Generative & Evaluative Research</li>
+          <li>Usability Research and Testing</li>
+          <li>Preference & A/B Testing</li>
+          <li>Persona and Brand Development</li>
+          <li>User Interviews</li>
+          <li>Task Analysis and User Flows</li>
+          <li>Knowledge of the standards of IOS and Android</li>
+          <li>Data Analysis</li>
+          <li>Basic HTML, CSS, and JavaScript</li>
+        </ul>
 
-			<!-- For your footer -->
-				  <div class="container">
-						<footer id="contact">
-							<h1>Get In Touch!</h1>
-							<p> Want to know more? Contact me by email:</p>
-							<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
-							<p> or check out my</p>
-							<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
-							<p>Copyright Celia Diller 2020</p>
-				    </footer>
-				  </div>
-				</div>
+        <h3>Tools Used:</h3>
 
-				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-				  <script src="js/scripts.js"></script>
-				</body>
-				</html>
+        <ul>
+          <li>Figma</li>
+          <li>Adobe XD</li>
+          <li>Marvel</li>
+          <li>Procreate</li>
+          <li>Adobe Illustrator</li>
+          <li>Atom</li>
+        </ul>
+      </main>
+    </div>
+
+    <!-- For your footer -->
+    <div class="container">
+      <footer id="contact">
+        <h1>Get In Touch!</h1>
+        <p> Want to know more? Contact me by email:</p>
+        <a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+        <p> or check out my</p>
+        <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+        <p>Copyright Celia Diller 2020</p>
+      </footer>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
