--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="description" content="vintageclothingapp">
   <title>Celia Diller UX/UI Designer Atlanta</title>
   <!-- For the css -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/default.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -34,7 +33,7 @@
           </picture>
 
           <nav>
-						<ul class="menu">
+            <ul class="menu">
               <li><a href="index.html" class="button contact">Work</a></li>
               <li><a href="about.html" class="button contact">About</a></li>
               <li><a href="file/link_to_resume.pdf" class="button contact">Resume</a></li>
@@ -52,99 +51,99 @@
           <h1> Enjoy My Work! </h1>
         </div>
       </div>
-			</div>
+    </div>
 
 
-      <!-- For the hero section -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="descWrapper">
-              <h3>Graphic Detail</h3>
-              <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
-              <a href="graphic_detail.html" class="button contact">View Project</a>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <picture>
-              <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
-              <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
-            </picture>
+    <!-- For the hero section -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="descWrapper">
+            <h3>Graphic Detail</h3>
+            <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+            <a href="graphic_detail.html" class="button contact">View Project</a>
           </div>
         </div>
 
-
-        <div class="row">
-					<div class="col-md-6">
-            <picture>
-              <source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
-              <img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
-            </picture>
-						</div>
-
-					<div class="col-md-6">
-							<div class="descWrapper">
-								<h3>Barcelona</h3>
-	              <p>A tapas app that helps explain the variety of food items on the menu</p>
-	              <a href="#" class="button contact">View Project</a>
-          	</div>
-        	</div>
-				</div>
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="descWrapper">
-              <h3>Let's Eat!</h3>
-              <p> A meal planner app that encourages healthy eating to all users</p>
-              <a href="#" class="button contact">View Project</a>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <picture>
-              <source srcset="img/let's_eat/let's_eat@1.jpg" media="(max-width:767px)">
-              <img src="img/let's_eat/let's_eat@2.jpg" alt="Let's Eat!">
-            </picture>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-						<picture>
-              <source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
-              <img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
-            </picture>
-          </div>
-
-
-
-				<div class="col-md-6">
-					<div class="descWrapper">
-						<h3>Adorn You</h3>
-						<p>A app that allows local artist to share and sell their work!</p>
-						<a href="#" class="button contact">View Project</a>
-					</div>
+        <div class="col-md-6">
+          <picture>
+            <source srcset="img/graphic_detail/graphic_detail@1.jpg" media="(max-width:767px)">
+            <img src="img/graphic_detail/graphic_detail@2.jpg" alt="Graphic Detail">
+          </picture>
         </div>
       </div>
-		</div>
 
-			<!-- For your footer -->
-				  <div class="container">
-						<footer id="contact">
-							<h1>Get In Touch!</h1>
-							<p> Want to know more? Contact me by email:</p>
-							<a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
-							<p> or check out my</p>
-							<a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
-							<p>Copyright Celia Diller 2020</p>
-				    </footer>
-				  </div>
-				</div>
 
-				  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-				    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <div class="row">
+        <div class="col-md-6">
+          <picture>
+            <source srcset="img/barcelona/barcelona_@1.jpg" media="(max-width:767px)">
+            <img src="img/barcelona/barcelona_@2.jpg" alt="Barcelona">
+          </picture>
+        </div>
 
-				  <script src="js/scripts.js"></script>
-				</body>
-				</html>
+        <div class="col-md-6">
+          <div class="descWrapper">
+            <h3>Barcelona</h3>
+            <p>A tapas app that helps explain the variety of food items on the menu</p>
+            <a href="#" class="button contact">View Project</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="descWrapper">
+            <h3>Let's Eat!</h3>
+            <p> A meal planner app that encourages healthy eating to all users</p>
+            <a href="#" class="button contact">View Project</a>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <picture>
+            <source srcset="img/let's_eat/let's_eat@1.jpg" media="(max-width:767px)">
+            <img src="img/let's_eat/let's_eat@2.jpg" alt="Let's Eat!">
+          </picture>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <picture>
+            <source srcset="img/adorn_you/adorn_you@1.jpg" media="(max-width:767px)">
+            <img src="img/adorn_you/adorn_you@2.jpg" alt="Adorn You">
+          </picture>
+        </div>
+
+
+
+        <div class="col-md-6">
+          <div class="descWrapper">
+            <h3>Adorn You</h3>
+            <p>A app that allows local artist to share and sell their work!</p>
+            <a href="#" class="button contact">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- For your footer -->
+    <div class="container">
+      <footer id="contact">
+        <h1>Get In Touch!</h1>
+        <p> Want to know more? Contact me by email:</p>
+        <a href="mailto:celiardiller@gmail.com">celiardiller@gmail.com </a>
+        <p> or check out my</p>
+        <a href="https://www.linkedin.com/in/celia-diller-0256a0166/">LinkedIn!</a>
+        <p>Copyright Celia Diller 2020</p>
+      </footer>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
