Edits Made before Final Preparation

--- a/about.html
+++ b/about.html
@@ -47,62 +47,62 @@
           <h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
         </div>
       </div>
-      <!-- For the hero section -->
+    </div>
 
-
-      <div class="container">
-        <picture>
-          <source srcset="img/profile.jpg" media="(max-width:767px)">
-          <img src="img/profile.jpg" alt="Celia Diller profile">
-        </picture>
+    <!-- For the hero section -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="custom-sizea">
+          <picture>
+            <source srcset="img/profile.jpg" media="(max-width:767px)">
+            <img src="img/profile.jpg" alt="Celia Diller profile">
+          </picture>
+        </div>
       </div>
 
-      <main>
-        <p>
-          My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
-          Biology
-          and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
-          and
-          am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
-          design
-          field, I had internships with social media marketing and website design fields. My artistic side bloomed
-          during college when I started to create drawings and paintings for fun. I love creating content that
-          helps
-          small businesses grow. I have juggled many things in the past and strive to do my best work with
-          everything I
-          take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
-          my love
-          of design and hard work of learning biology into a career. I am looking for a place where I can strive
-          to be
-          my best innovative and creative self.
-        </p>
+      <div class="col-md-6">
+        <div class="descWrappera">
+          <p>
+            My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
+            Biology
+            and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
+            and
+            am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
+            design
+            field, I had internships with social media marketing and website design fields. My artistic side bloomed
+            during college when I started to create drawings and paintings for fun. I love creating content that
+            helps
+            small businesses grow. I have juggled many things in the past and strive to do my best work with
+            everything I
+            take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
+            my love
+            of design and hard work of learning biology into a career. I am looking for a place where I can strive
+            to be
+            my best innovative and creative self.
+          </p>
 
+          <h3>Skills and Tools:</h3>
+          <ul>
+            <li>Generative & Evaluative Research</li>
+            <li>Usability Research and Testing</li>
+            <li>Preference & A/B Testing</li>
+            <li>Persona and Brand Development</li>
+            <li>User Interviews</li>
+            <li>Task Analysis and User Flows</li>
+            <li>Knowledge of the standards of IOS and Android</li>
+            <li>Data Analysis</li>
+            <li>Basic HTML, CSS, and JavaScript</li>
+          </ul>
 
-        <h3>Skills and Tools:</h3>
-        <ul>
-          <li>Generative & Evaluative Research</li>
-          <li>Usability Research and Testing</li>
-          <li>Preference & A/B Testing</li>
-          <li>Persona and Brand Development</li>
-          <li>User Interviews</li>
-          <li>Task Analysis and User Flows</li>
-          <li>Knowledge of the standards of IOS and Android</li>
-          <li>Data Analysis</li>
-          <li>Basic HTML, CSS, and JavaScript</li>
-        </ul>
-
-        <h3>Tools Used:</h3>
-
-
-        <ul>
-          <li>Figma</li>
-          <li>Adobe XD</li>
-          <li>Marvel</li>
-          <li>Procreate</li>
-          <li>Adobe Illustrator</li>
-          <li>Atom</li>
-        </ul>
-      </main>
+          <h3>Tools Used:</h3>
+          <ul>
+            <li>Figma and Marvel</li>
+            <li>Adobe Illustrator and Adobe XD</li>
+            <li>Procreate</li>
+            <li>Atom</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- For your footer -->
