--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -53,7 +53,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="descWrapper">
-              <h3>Graphic Detail</h3>
+              <h2>Graphic Detail</h2>
               <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
             </div>
           </div>
@@ -67,6 +67,7 @@
         </div>
 
         <div class="container">
+          <div class="custom-sizeb">
           <p>Graphic Detail was my first design in the course. It helped me learn all what
             UI/UX design was about. I got to create my first design by looking at what
             others have done with their apps and coordinate my design with that to
@@ -84,6 +85,7 @@
 
         </div>
       </div>
+    </div>
     </div>
 
     <!-- For your footer -->
