--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="descWrapper">
             <h2>Barcelona</h2>
             <p>A tapas app that helps explain the variety of food items on the menu</p>
-            <a href="#" class="button contact">View Project</a>
+            <a href="barcelona.html" class="button contact">View Project</a>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
           <div class="descWrapper">
             <h2>Let's Eat!</h2>
             <p> A meal planner app that encourages healthy eating to all users</p>
-            <a href="#" class="button contact">View Project</a>
+            <a href="let's_eat.html" class="button contact">View Project</a>
           </div>
         </div>
 
@@ -122,7 +122,7 @@
           <div class="descWrapper">
             <h2>Adorn You</h2>
             <p>A app that allows local artist to share and sell their work!</p>
-            <a href="#" class="button contact">View Project</a>
+            <a href="adorn_you.html" class="button contact">View Project</a>
           </div>
         </div>
       </div>
