--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
         </header>
 
         <div>
-          <h1>Hi! My name is Celia Diller- a UI/UX Design Student. </h1>
-          <p>I am UI/UX design student and am very excited to start fine tuning my designs to work with developers. I
-            love
-            creating and editing content to make it the best it can possibly be for users.</p>
+          <h1>Hi! My name is Celia Diller- a UI/UX Designer </h1>
+          <p>I just completed my UI Design courses and am happy to start looking for designer positions! I learned so many things through my courses and am very excited to start fine tuning my designs to work with developers. I
+            love creating and editing content to make it the best it can possibly be for users.</p>
           <h1> Enjoy My Work! </h1>
         </div>
       </div>
@@ -85,7 +84,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Barcelona</h2>
-            <p>A tapas app that helps explain the variety of food items on the menu</p>
+            <p>A tapas app that helps explain the variety of food items on the menu.</p>
             <a href="barcelona.html" class="button contact">View Project</a>
           </div>
         </div>
@@ -95,7 +94,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Let's Eat!</h2>
-            <p> A meal planner app that encourages healthy eating to all users</p>
+            <p> A meal planner app that encourages healthy eating to all users.</p>
             <a href="let's_eat.html" class="button contact">View Project</a>
           </div>
         </div>
