--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
     <!-- For the hero section -->
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="custom-sizea">
           <picture>
             <source srcset="img/profile.jpg" media="(max-width:767px)">
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="descWrappera">
           <p>
             My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
