Adding Case Study

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <h2>Let's Eat!</h2>
             <p> A meal planner app that encourages healthy eating to all users.</p>
             <a href="let's_eat.html" class="button contact">View Project</a>
+            <a href="let's_eat_case_study.html" class="button contact">View Case Study</a>
           </div>
         </div>
 
