--- a/let's_eat_case_study.html
+++ b/let's_eat_case_study.html
@@ -67,8 +67,8 @@
             <p>This is the case study I created for the meal planning app Let's Eat!</p>
 
             <picture>
-              <source srcset="img/let's_eat/let's_eat_case_study.png" media="(max-width:767px)">
-              <img src="img/let's_eat/let's_eat_case_study.png" alt="Let's Eat!">
+              <source srcset="img/let's_eat/let's_eat_case_study.jpg" media="(max-width:767px)">
+              <img src="img/let's_eat/let's_eat_case_study.jpg" alt="Let's Eat!">
             </picture>
 
           </div>
