--- a/adorn_you.html
+++ b/adorn_you.html
@@ -64,10 +64,11 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>Adorn You was my final app that completed my UI/UX Design courses.
-              When I was developing this app, I took all I learned through the other three
-              apps to create a functional and beautiful app. I loved being able to add
-              different animations to create my final app!</p>
+            <p>AAdorn You was the last project needed to complete my UI/UX Design
+              courses. When I was developing this app, I used my experiences with
+              the other projects to innovate a functional and beautiful app. I
+              loved adding different animations and new techniques to Adorn
+              You.</p>
 
             <picture>
               <source srcset="img/adorn_you/adorn_you_long_artboard.jpg" media="(max-width:767px)">
