--- a/barcelona.html
+++ b/barcelona.html
@@ -64,10 +64,10 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>Barcelona was one of my favorite apps that I created because I based it off
-              my own experience eating at a tapas restaurant! Here, I learned the basics
-              of IOS versus Android and created an app designated to be used on both
-              platforms.</p>
+            <p> Barcelona was one of my favorite apps I created because I based it
+              on my own experience eating at a tapas restaurant in Atlanta. Here,
+              I learned the basics of IOS versus Android and created an app
+              responsive on both device types.</p>
 
             <picture>
               <source srcset="img/barcelona/barcelona_long_artboard.jpg" media="(max-width:767px)">
