--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -64,10 +64,12 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>Graphic Detail was my first design in the course. It helped me learn all what
-              UI/UX design was about. I got to create my first design by looking at what
-              others have done with their apps and coordinate my design with that to
-              create a beautiful, aesthetically pleasing app.</p>
+            <p>Graphic Detail was my first design in the course. It helped me learn the
+              beginning of UI/UX design. I created my first design by looking at what
+              others have done with their designs and then innovated a beautiful,
+              aesthetically pleasing app for reselling retail. Graphic Detail makes
+              cleaning out your closet simple.
+            </p>
 
             <picture>
               <source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:767px)">
