--- a/let's_eat_case_study.html
+++ b/let's_eat_case_study.html
@@ -64,7 +64,7 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>This is the case study I created for the meal planning app Let's Eat! This app is a on the go meal planning app made to fit into the users schedule. Check out my case study below!</p>
+            <p>This is the case study I created for the meal planning app Let's Eat! This app is a on the go meal planning app made to fit into the users schedule.</p>
 
             <picture>
               <source srcset="img/let's_eat/let's_eat_case_study.jpg" media="(max-width:767px)">
