--- a/about.html
+++ b/about.html
@@ -63,22 +63,21 @@
       <div class="col-lg-6">
         <div class="descWrappera">
           <p>
-            My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS in
-            Biology
-            and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all 4 years
+            My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS
+            in Biology
+            and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all four years
             and
-            am currently a UI/UX design student and a barista! While I am just starting out my career in the UI/UX
+            am currently a UI/UX design student and a barista! While I'm just starting my career in the UI/UX
             design
-            field, I had internships with social media marketing and website design fields. My artistic side bloomed
+            field, I had internships in social media marketing and website design fields. My artistic side bloomed
             during college when I started to create drawings and paintings for fun. I love creating content that
             helps
             small businesses grow. I have juggled many things in the past and strive to do my best work with
             everything I
-            take on. Particularly, I would like to work as a UI/UX designer for a biotech company so I can combine
+            take on. Particularly, I would like to work as a UI/UX Designer for a biotech company so I can combine
             my love
-            of design and hard work of learning biology into a career. I am looking for a place where I can strive
-            to be
-            my best innovative and creative self.
+            of design and learning biology into a career. I am looking for a place where I can strive to be my
+            best innovative and creative self.
           </p>
 
           <h3>Skills and Tools:</h3>
