--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
         <div>
           <h1>Hi! My name is Celia Diller- a UI/UX Designer </h1>
-          <p>I just completed my UI Design courses and am happy to start looking for designer positions! I learned so many things through my courses and am very excited to start fine tuning my designs to work with developers. I
-            love creating and editing content to make it the best it can possibly be for users.</p>
+          <p>I just completed my UI Design courses and am happy to start looking for designer positions! I learned so many things through my courses and am very excited to start fine-tuning my designs to work with developers. I love creating and editing content to make it the best for users.</p>
           <h1> Enjoy My Work! </h1>
         </div>
       </div>
