--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
     <!-- For the hero section -->
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="custom-sizea">
           <picture>
             <source srcset="img/profile.jpg" media="(max-width:767px)">
