--- a/about.html
+++ b/about.html
@@ -63,21 +63,17 @@
       <div class="col-md-6">
         <div class="descWrappera">
           <p>
-            My name is Celia Diller, and I graduated from St. Lawrence University in upstate New York with a BS
-            in Biology
-            and a Business in the Liberal Arts Degree. I rode on a nationally ranked equestrian team for all four years
-            and
-            am currently a UI/UX design student and a barista! While I'm just starting my career in the UI/UX
-            design
-            field, I had internships in social media marketing and website design fields. My artistic side bloomed
-            during college when I started to create drawings and paintings for fun. I love creating content that
-            helps
-            small businesses grow. I have juggled many things in the past and strive to do my best work with
-            everything I
-            take on. Particularly, I would like to work as a UI/UX Designer for a biotech company so I can combine
-            my love
-            of design and learning biology into a career. I am looking for a place where I can strive to be my
-            best innovative and creative self.
+            I'm a UI/ UX designer with a passion for visual design and a background
+            in social media marketing, website design, and business development. I
+            have experience working for start-up businesses and non-profit organizations
+            which helped connect me more to the community. I have profited businesses by
+            expanding clientele, increasing social media traffic, leading design projects,
+            and increasing donor engagements. My studies of UI/UX Design have made me
+            excited to dive further into design research and working with developers.
+            For my next role, I am looking for increased responsibility to challenge my
+            skills and mentorship/growth opportunities within a company. Particularly, I
+            would like to work as a UI/UX Designer for a biotech company to combine my love
+            of design and biology into a career.
           </p>
 
           <h3>Skills and Tools:</h3>
