--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
 
         <div>
           <h1>Hi! My name is Celia Diller- a UI/UX Designer </h1>
-          <p>I just completed my UI Design courses and am happy to start looking for designer positions! I learned so many things through my courses and am very excited to start fine-tuning my designs to work with developers. I love creating and editing content to make it the best for users.</p>
+          <p>As a UI/UX Designer based in Atlanta, I am passionate about creating
+            aesthetically pleasing and functional products that meet the client's
+            and the company’s needs. I enjoy solving design problems and using the
+            research I find through user testing to develop friendly applications for
+            users. I have a proven background in graphic design, iconography, and
+            brand building in a business developmental environment.
+
+            I bring my skills of time management, communication, teamwork, and
+            detailed creativity to a role as a product designer. I built upon my
+            current skill set as a UI designer through an intensive UI Design
+            course at Career Foundry.</p>
           <h1> Enjoy My Work! </h1>
         </div>
       </div>
@@ -58,7 +68,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Graphic Detail</h2>
-            <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+            <p>A detailed vintage clothing app that allows users to add something new to their closet.</p>
             <a href="graphic_detail.html" class="button contact">View Project</a>
           </div>
         </div>
@@ -83,7 +93,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Barcelona</h2>
-            <p>A tapas app that helps explain the variety of food items on the menu.</p>
+            <p>A tapas app that allows users to explore the menu.</p>
             <a href="barcelona.html" class="button contact">View Project</a>
           </div>
         </div>
@@ -93,7 +103,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Let's Eat!</h2>
-            <p> A meal planner app that encourages healthy eating to all users.</p>
+            <p> A meal planner app that encourages healthy meals to all users.</p>
             <a href="let's_eat.html" class="button contact">View Project</a>
             <a href="let's_eat_case_study.html" class="button contact">View Case Study</a>
           </div>
@@ -120,7 +130,7 @@
         <div class="col-md-6">
           <div class="descWrapper">
             <h2>Adorn You</h2>
-            <p>A app that allows local artist to share and sell their work!</p>
+            <p>An app that allows local artists to share and sell their work.</p>
             <a href="adorn_you.html" class="button contact">View Project</a>
           </div>
         </div>
