--- a/adorn_you.html
+++ b/adorn_you.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div class="descWrapper">
               <h2>Adorn You</h2>
-              <p>A app that allows local artist to share and sell their work!</p>
+              <p>An app that allows local artists to share and sell their work.</p>
             </div>
           </div>
 
@@ -64,11 +64,11 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>AAdorn You was the last project needed to complete my UI/UX Design
-              courses. When I was developing this app, I used my experiences with
-              the other projects to innovate a functional and beautiful app. I
-              loved adding different animations and new techniques to Adorn
-              You.</p>
+            <p>Adorn You is an app designated to help local artists sell their art.
+              Inspired by work for non-profits, I wanted to create an app that would
+              help support local communities. This project entailed a combination of
+              skills I accumulated throughout the other three projects and, in addition,
+              entailed adding different animations to the app.</p>
 
             <picture>
               <source srcset="img/adorn_you/adorn_you_long_artboard.jpg" media="(max-width:767px)">
