--- a/barcelona.html
+++ b/barcelona.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div class="descWrapper">
               <h2>Barcelona</h2>
-              <p>A tapas app that helps explain the variety of food items on the menu</p>
+              <p>A tapas app that allows users to explore the menu.</p>
             </div>
           </div>
 
@@ -64,10 +64,11 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p> Barcelona was one of my favorite apps I created because I based it
-              on my own experience eating at a tapas restaurant in Atlanta. Here,
-              I learned the basics of IOS versus Android and created an app
-              responsive on both device types.</p>
+            <p> Inspired by my personal experience, the app Barcelona helps users dive
+              into the details of tapas. The purpose of this app was to illuminate the
+              differences in typography and style between IOS and Android. Styling for
+              different device types allowed me to gain skills in material design and
+              build a responsive app on both devices.</p>
 
             <picture>
               <source srcset="img/barcelona/barcelona_long_artboard.jpg" media="(max-width:767px)">
