--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div class="descWrapper">
               <h2>Graphic Detail</h2>
-              <p>A detailed vintage clothing app that is ready to add something new to your closet!</p>
+              <p>A detailed vintage clothing app that allows users to add something new to their closet.</p>
             </div>
           </div>
 
@@ -64,11 +64,11 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>Graphic Detail was my first design in the course. It helped me learn the
-              beginning of UI/UX design. I created my first design by looking at what
-              others have done with their designs and then innovated a beautiful,
-              aesthetically pleasing app for reselling retail. Graphic Detail makes
-              cleaning out your closet simple.
+            <p>The initial project to launch my UI/UX design career was Graphic Detail.
+              Focusing on the base of design, the majority of this project was research-based
+              and was conducted through user testing and viewing other student finalized projects.
+              After research, mood boards and style guides were innovated for a reselling retail app.
+              Graphic Detail is a timeless app that makes cleaning out users' closets simple.
             </p>
 
             <picture>
