--- a/let's_eat.html
+++ b/let's_eat.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div class="descWrapper">
               <h2>Let's Eat!</h2>
-              <p> A meal planner app that encourages healthy eating to all users!</p>
+              <p> A meal planner app that encourages healthy meals to all users.</p>
             </div>
           </div>
 
@@ -64,10 +64,10 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>Let’s Eat was an app that I created to be used on multiple platforms
-              (desktop, tablet, and app). This increased my learning by allowing me to do
-              user testing/user flows that helped me create a better layout and
-              functionality of my app on all three platforms.</p>
+            <p>Let's Eat! is a meal planning app that allows users to plan weekly meals
+              at their leisure and encourages users to try healthier recipes. This app
+              furthered my skills in user testing and responsive design by testing the
+              functionality and user experience throughout the app. </p>
 
             <picture>
               <source srcset="img/let's_eat/let's_eat_long_artboard.jpg" media="(max-width:767px)">
