--- a/let's_eat_case_study.html
+++ b/let's_eat_case_study.html
@@ -50,7 +50,7 @@
           <div class="col-md-6">
             <div class="descWrapper">
               <h2>Let's Eat!</h2>
-              <p> A meal planner app that encourages healthy eating to all users!</p>
+              <p> A meal planner app that encourages healthy meals to all users.</p>
             </div>
           </div>
 
@@ -64,7 +64,9 @@
 
         <div class="container">
           <div class="custom-sizeb">
-            <p>This is the case study I created for the meal planning app Let's Eat! This app is a on the go meal planning app made to fit into the users schedule.</p>
+            <p>The case study created for Let's Eat! entails an in-depth view of the
+              design process of the app. It includes user research, thought processes,
+              style guides, and more.</p>
 
             <picture>
               <source srcset="img/let's_eat/let's_eat_case_study.jpg" media="(max-width:767px)">
