--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         </header>
 
         <div>
-          <h1>Hi! My name is Celia Diller- a UI/UX Design Student. Enjoy My Work! </h1>
+          <h1>Hi! My name is Celia Diller- a UI/UX Designer. Enjoy My Work! </h1>
         </div>
       </div>
     </div>
