--- a/let's_eat.html
+++ b/let's_eat.html
@@ -28,8 +28,8 @@
       <div class="navtoggle" id="myNavtoggle">
         <header>
           <picture>
-            <source srcset="img/logo@1.png" media="(max-width:767px)">
-            <img src="img/logo@2.png" class="logo" alt="Celia Diller logo">
+            <source srcset="img2/logo@1.png" media="(max-width:767px)">
+            <img src="img2/logo@2.png" class="logo" alt="Celia Diller logo">
           </picture>
 
           <nav>
