--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
       <div class="col-md-6">
         <div class="custom-sizea">
           <picture>
-            <source srcset="img/profile.jpg" media="(max-width:767px)">
-            <img src="img/profile.jpg" alt="Celia Diller profile">
+            <source srcset="img2/profile.jpg" media="(max-width:767px)">
+            <img src="img2/profile.jpg" alt="Celia Diller profile">
           </picture>
         </div>
       </div>
