Graphic Detail Case Study

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <h2>Graphic Detail</h2>
             <p>A detailed vintage clothing app that allows users to add something new to their closet.</p>
             <a href="graphic_detail.html" class="button contact">View Project</a>
+            <a href="graphic_detail_case_study.html" class="button contact">View Case Study</a>
           </div>
         </div>
 
