--- a/graphic_detail_case_study.html
+++ b/graphic_detail_case_study.html
@@ -47,6 +47,15 @@
       <!-- For the body -->
 
       <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="descWrapper">
+              <h2>Graphic Detail</h2>
+            </div>
+          </div>
+        </div>
+        
+      <div class="container">
           <div class="custom-sizeb">
             <p>The initial project to launch my UI/UX design career was Graphic Detail.
               Focusing on the base of design, the majority of this project was research-based
