--- a/graphic_detail.html
+++ b/graphic_detail.html
@@ -63,12 +63,12 @@
               Graphic Detail is a timeless app that makes cleaning out users' closets simple.
             </p>
 
+        <div class="img2">
             <picture>
               <source srcset="img/graphic_detail/graphic_detail_long_artboard.jpg" media="(max-width:500px)">
               <img src="img/graphic_detail/graphic_detail_long_artboard.jpg" alt="Graphic Detail">
             </picture>
-
-          </div>
+        </div>
         </div>
       </div>
     </div>
